bugfix: fill screen on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -66,6 +66,9 @@ body,
 }
 
 @media (max-width: 768px) {
+  body {
+    height: 100vh;
+  }
   .logo {
     width: 50%;
     height: auto;
